{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 183,
  "lineage": "2bd1b36d-1c79-24fa-ea38-97a33686d81f",
  "resources": [
    {
      "module": "module.data_services",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-0dc6f6eabffaf3fe0",
            "description": "Security group for Aurora MySQL cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc6f6eabffaf3fe0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "10.2.0.0/16",
                  "10.11.0.0/16"
                ],
                "description": "MySQL from all VPCs",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lab-aurora-20260307124012078500000021",
            "name_prefix": "lab-aurora-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-Aurora-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-Aurora-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_services",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "valkey",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-04f9f03f73b1f7c31",
            "description": "Security group for ElastiCache Valkey",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f9f03f73b1f7c31",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "10.2.0.0/16",
                  "10.11.0.0/16"
                ],
                "description": "Valkey from all VPCs",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "lab-valkey-20260307124011980200000020",
            "name_prefix": "lab-valkey-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-Valkey-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-Valkey-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0578150dd344856cb",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:elastic-ip/eipalloc-0578150dd344856cb",
            "association_id": "eipassoc-03ad1bfe5b42a956c",
            "domain": "vpc",
            "id": "eipalloc-0578150dd344856cb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-094cadc57ca83c8d9",
            "private_dns": "ip-10-11-254-213.ap-northeast-2.compute.internal",
            "private_ip": "10.11.254.213",
            "public_dns": "ec2-52-79-201-62.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.201.62",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-EIP-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-EIP-A",
              "Project": "aws-lab-infra"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e2193703bcf13e",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:elastic-ip/eipalloc-001e2193703bcf13e",
            "association_id": "eipassoc-02b903f3a185a0b40",
            "domain": "vpc",
            "id": "eipalloc-001e2193703bcf13e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03b97e230c6ec97e0",
            "private_dns": "ip-10-11-255-7.ap-northeast-2.compute.internal",
            "private_ip": "10.11.255.7",
            "public_dns": "ec2-52-79-217-226.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.217.226",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-EIP-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-EIP-B",
              "Project": "aws-lab-infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-09c4fd37f91abe303",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DMZ-VPC-ec2-ssm-20260307123955092300000006",
            "id": "i-09c4fd37f91abe303",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bd9c2d3c96cf7e3f"
              }
            ],
            "primary_network_interface_id": "eni-0bd9c2d3c96cf7e3f",
            "private_dns": "ip-10-11-51-184.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.51.184",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00d39e868fa882243",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081943ac1c22d6f0a",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb2537e8d4f5586b"
            ]
          },
          "dependencies": [
            "module.dmz_vpc.aws_iam_instance_profile.ec2_ssm",
            "module.dmz_vpc.aws_iam_role.ec2_ssm",
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_security_group.ec2",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-060ddf38c65653cfb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DMZ-VPC-ec2-ssm-20260307123955092300000006",
            "id": "i-060ddf38c65653cfb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03de8de224121f832"
              }
            ],
            "primary_network_interface_id": "eni-03de8de224121f832",
            "private_dns": "ip-10-11-92-247.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.92.247",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04fe2af59ac48e57f",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f759521cbefaa85",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb2537e8d4f5586b"
            ]
          },
          "dependencies": [
            "module.dmz_vpc.aws_iam_instance_profile.ec2_ssm",
            "module.dmz_vpc.aws_iam_role.ec2_ssm",
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_security_group.ec2",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:internet-gateway/igw-0b8c4bd4d758c664f",
            "id": "igw-0b8c4bd4d758c664f",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-IGW",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-IGW",
              "Project": "aws-lab-infra"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:loadbalancer/app/dmz-alb/911d39f9ae7d7c7a",
            "arn_suffix": "app/dmz-alb/911d39f9ae7d7c7a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dmz-alb-474217077.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:loadbalancer/app/dmz-alb/911d39f9ae7d7c7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dmz-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-083530bfd60061915"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04259f9cc5c4e5d4b"
              },
              {
                "subnet_id": "subnet-0a051aeacc317e47e"
              }
            ],
            "subnets": [
              "subnet-04259f9cc5c4e5d4b",
              "subnet-0a051aeacc317e47e"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB",
              "Project": "aws-lab-infra"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_subnet.alb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:listener/app/dmz-alb/911d39f9ae7d7c7a/6fd54886ad5fcdeb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:listener/app/dmz-alb/911d39f9ae7d7c7a/6fd54886ad5fcdeb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:loadbalancer/app/dmz-alb/911d39f9ae7d7c7a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-Listener",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-Listener",
              "Project": "aws-lab-infra"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_lb.this",
            "module.dmz_vpc.aws_lb_target_group.this",
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_subnet.alb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650",
            "arn_suffix": "targetgroup/dmz-tg/e680ebb534075650",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dmz-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-TG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-TG",
              "Project": "aws-lab-infra"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650,i-09c4fd37f91abe303,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650",
            "target_id": "i-09c4fd37f91abe303"
          },
          "dependencies": [
            "module.dmz_vpc.aws_iam_instance_profile.ec2_ssm",
            "module.dmz_vpc.aws_iam_role.ec2_ssm",
            "module.dmz_vpc.aws_instance.private",
            "module.dmz_vpc.aws_lb_target_group.this",
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_security_group.ec2",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650,i-060ddf38c65653cfb,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:654654438809:targetgroup/dmz-tg/e680ebb534075650",
            "target_id": "i-060ddf38c65653cfb"
          },
          "dependencies": [
            "module.dmz_vpc.aws_iam_instance_profile.ec2_ssm",
            "module.dmz_vpc.aws_iam_role.ec2_ssm",
            "module.dmz_vpc.aws_instance.private",
            "module.dmz_vpc.aws_lb_target_group.this",
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_security_group.ec2",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0578150dd344856cb",
            "association_id": "eipassoc-03ad1bfe5b42a956c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-088501d4069d9317b",
            "network_interface_id": "eni-094cadc57ca83c8d9",
            "private_ip": "10.11.254.213",
            "public_ip": "52.79.201.62",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f07a46cd0e69988",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-A",
              "Project": "aws-lab-infra"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_eip.natgw",
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e2193703bcf13e",
            "association_id": "eipassoc-02b903f3a185a0b40",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0389caf0c90996e85",
            "network_interface_id": "eni-03b97e230c6ec97e0",
            "private_ip": "10.11.255.7",
            "public_ip": "52.79.217.226",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-083e8cc23795da2b3",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-B",
              "Project": "aws-lab-infra"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_eip.natgw",
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "alb_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9e02b6c137cbc151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9e02b6c137cbc15",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0351fa7400545c406",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.alb",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "data_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052ba9b106b9a94dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0389caf0c90996e85",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-052ba9b106b9a94dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_eip.natgw",
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_nat_gateway.this",
            "module.dmz_vpc.aws_route_table.data",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "fw_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8c4bd4d758c664f",
            "id": "r-rtb-0e290453bc6518aa81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e290453bc6518aa8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_route_table.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8c4bd4d758c664f",
            "id": "r-rtb-0387a924ec5a86acd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0387a924ec5a86acd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_route_table.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_ingress_to_alb_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.3.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07844b782a595aa332448014358",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07844b782a595aa33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0351fa7400545c406",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.igw_ingress",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_ingress_to_alb_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.4.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07844b782a595aa332364312750",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07844b782a595aa33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0f035d1550e698da8",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.igw_ingress",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_ingress_to_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.1.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07844b782a595aa333693157661",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07844b782a595aa33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0351fa7400545c406",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.igw_ingress",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_ingress_to_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07844b782a595aa331521840051",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07844b782a595aa33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0f035d1550e698da8",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.igw_ingress",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "natgw_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8c4bd4d758c664f",
            "id": "r-rtb-0412b6a0b4317f5421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0412b6a0b4317f542",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_route_table.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8c4bd4d758c664f",
            "id": "r-rtb-00c69208b473916d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-00c69208b473916d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_route_table.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ad84cbc37b649ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-088501d4069d9317b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ad84cbc37b649ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_eip.natgw",
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_nat_gateway.this",
            "module.dmz_vpc.aws_route_table.private",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063a44b1b1270f2cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-063a44b1b1270f2cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0351fa7400545c406",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_networkfirewall_firewall.this",
            "module.dmz_vpc.aws_networkfirewall_firewall_policy.this",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateful_allow",
            "module.dmz_vpc.aws_networkfirewall_rule_group.stateless_drop_remote",
            "module.dmz_vpc.aws_route_table.public",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0d9e02b6c137cbc15",
            "id": "rtb-0d9e02b6c137cbc15",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0351fa7400545c406",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0751e311056bbd142",
            "id": "rtb-0751e311056bbd142",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-052ba9b106b9a94dd",
            "id": "rtb-052ba9b106b9a94dd",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0389caf0c90996e85",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0e290453bc6518aa8",
            "id": "rtb-0e290453bc6518aa8",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c4bd4d758c664f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-RT-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-RT-A",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0387a924ec5a86acd",
            "id": "rtb-0387a924ec5a86acd",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c4bd4d758c664f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-RT-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-RT-B",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-03b5238c5ca20400c",
            "id": "rtb-03b5238c5ca20400c",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-07844b782a595aa33",
            "id": "rtb-07844b782a595aa33",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0351fa7400545c406",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0f035d1550e698da8",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0351fa7400545c406",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.4.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0f035d1550e698da8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-IGW-Ingress-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-IGW-Ingress-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0412b6a0b4317f542",
            "id": "rtb-0412b6a0b4317f542",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c4bd4d758c664f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-RT-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-RT-A",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-00c69208b473916d7",
            "id": "rtb-00c69208b473916d7",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8c4bd4d758c664f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-RT-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-RT-B",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-03ad84cbc37b649ce",
            "id": "rtb-03ad84cbc37b649ce",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088501d4069d9317b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-063a44b1b1270f2cc",
            "id": "rtb-063a44b1b1270f2cc",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0351fa7400545c406",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0854d0cdfdeb40446",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9e02b6c137cbc15",
            "subnet_id": "subnet-0a051aeacc317e47e"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.alb",
            "module.dmz_vpc.aws_subnet.alb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a22359cfb8cd1698",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9e02b6c137cbc15",
            "subnet_id": "subnet-04259f9cc5c4e5d4b"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.alb",
            "module.dmz_vpc.aws_subnet.alb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a861ca9887fff1d6",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0751e311056bbd142",
            "subnet_id": "subnet-0dab00e336c889413"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.attach",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438ef59fb42baee6",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0751e311056bbd142",
            "subnet_id": "subnet-02356ccad49fdd6a3"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.attach",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b23be455a6aefd5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-052ba9b106b9a94dd",
            "subnet_id": "subnet-00b1715aea01e40bb"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.data",
            "module.dmz_vpc.aws_subnet.data",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7e975f96d1e37b5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-052ba9b106b9a94dd",
            "subnet_id": "subnet-0971b04c7a5cf0f86"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.data",
            "module.dmz_vpc.aws_subnet.data",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c8124911c3f33c1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e290453bc6518aa8",
            "subnet_id": "subnet-0e0b7c71defe2ecac"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.fw",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c2f4d8890f76640",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0387a924ec5a86acd",
            "subnet_id": "subnet-0cb2ab798b4809e0c"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.fw",
            "module.dmz_vpc.aws_subnet.fw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00678687547811240",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b5238c5ca20400c",
            "subnet_id": "subnet-0978a837eb660bbc5"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.gwlb",
            "module.dmz_vpc.aws_subnet.gwlb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f455fbf4aa74e1f",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03b5238c5ca20400c",
            "subnet_id": "subnet-0f9cc70e415938015"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.gwlb",
            "module.dmz_vpc.aws_subnet.gwlb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0b8c4bd4d758c664f",
            "id": "rtbassoc-032c3fd45ea594adf",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07844b782a595aa33"
          },
          "dependencies": [
            "module.dmz_vpc.aws_internet_gateway.this",
            "module.dmz_vpc.aws_route_table.igw_ingress",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7e421f5b9d0cadb",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0412b6a0b4317f542",
            "subnet_id": "subnet-08f07a46cd0e69988"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.natgw",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a821e2d611339ef",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-00c69208b473916d7",
            "subnet_id": "subnet-083e8cc23795da2b3"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.natgw",
            "module.dmz_vpc.aws_subnet.natgw",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0896b350389637",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ad84cbc37b649ce",
            "subnet_id": "subnet-081943ac1c22d6f0a"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.private",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0754e6d61db870301",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ad84cbc37b649ce",
            "subnet_id": "subnet-06f759521cbefaa85"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.private",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed70d9767f1c3b9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-063a44b1b1270f2cc",
            "subnet_id": "subnet-0823236aa6b82a019"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.public",
            "module.dmz_vpc.aws_subnet.public",
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d780bb2ec8f1afdc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-063a44b1b1270f2cc",
            "subnet_id": "subnet-0ef02f9b4a0807d98"
          },
          "dependencies": [
            "module.dmz_vpc.aws_route_table.public",
            "module.dmz_vpc.aws_subnet.public",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-083530bfd60061915",
            "description": "Security group for DMZ ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083530bfd60061915",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from CloudFront",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-22a6434b"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DMZ-VPC-alb-20260307124830496500000001",
            "name_prefix": "DMZ-VPC-alb-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-0eb2537e8d4f5586b",
            "description": "Security group for DMZ EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb2537e8d4f5586b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "ICMP from RFC1918",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083530bfd60061915"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DMZ-VPC-ec2-20260307124832840300000002",
            "name_prefix": "DMZ-VPC-ec2-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_security_group.alb",
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-036944860274080e8",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036944860274080e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "DMZ-VPC-vpce-2026030712400958930000001c",
            "name_prefix": "DMZ-VPC-vpce-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0a051aeacc317e47e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a051aeacc317e47e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-A",
              "Project": "aws-lab-infra",
              "Tier": "ALB"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-A",
              "Project": "aws-lab-infra",
              "Tier": "ALB"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-04259f9cc5c4e5d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04259f9cc5c4e5d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-B",
              "Project": "aws-lab-infra",
              "Tier": "ALB"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-ALB-B",
              "Project": "aws-lab-infra",
              "Tier": "ALB"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0dab00e336c889413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.248.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dab00e336c889413",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-02356ccad49fdd6a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.249.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02356ccad49fdd6a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-00b1715aea01e40bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.160.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1715aea01e40bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0971b04c7a5cf0f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.168.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0971b04c7a5cf0f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0e0b7c71defe2ecac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.252.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0b7c71defe2ecac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-A",
              "Project": "aws-lab-infra",
              "Tier": "Firewall"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-A",
              "Project": "aws-lab-infra",
              "Tier": "Firewall"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0cb2ab798b4809e0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.253.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb2ab798b4809e0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-B",
              "Project": "aws-lab-infra",
              "Tier": "Firewall"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-FW-B",
              "Project": "aws-lab-infra",
              "Tier": "Firewall"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0978a837eb660bbc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0978a837eb660bbc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-A",
              "Project": "aws-lab-infra",
              "Tier": "GWLB"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-A",
              "Project": "aws-lab-infra",
              "Tier": "GWLB"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0f9cc70e415938015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9cc70e415938015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-B",
              "Project": "aws-lab-infra",
              "Tier": "GWLB"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-GWLB-B",
              "Project": "aws-lab-infra",
              "Tier": "GWLB"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-08f07a46cd0e69988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.254.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f07a46cd0e69988",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-A",
              "Project": "aws-lab-infra",
              "Tier": "NATGW"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-A",
              "Project": "aws-lab-infra",
              "Tier": "NATGW"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-083e8cc23795da2b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.255.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083e8cc23795da2b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-B",
              "Project": "aws-lab-infra",
              "Tier": "NATGW"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-NATGW-B",
              "Project": "aws-lab-infra",
              "Tier": "NATGW"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-081943ac1c22d6f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081943ac1c22d6f0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-06f759521cbefaa85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f759521cbefaa85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0823236aa6b82a019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0823236aa6b82a019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0ef02f9b4a0807d98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef02f9b4a0807d98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc/vpc-01b5a53c9e04110f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-03a4de95d65de9c0b",
            "default_route_table_id": "rtb-04df862a2781f1b9b",
            "default_security_group_id": "sg-0fe8e2bede111293f",
            "dhcp_options_id": "dopt-042f336bb0709cd7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b5a53c9e04110f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04df862a2781f1b9b",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC",
              "Project": "aws-lab-infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-07836289d2404a75f",
            "dns_entry": [
              {
                "dns_name": "vpce-07836289d2404a75f-u0qmd9v2.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-07836289d2404a75f-u0qmd9v2-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-07836289d2404a75f-u0qmd9v2-ap-northeast-2b.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02831663KVGPQF5MZ974"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07836289d2404a75f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01b97782cddba807d",
              "eni-06afd965bd9e6c7db"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-036944860274080e8"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.11.33.237",
                "subnet_id": "subnet-081943ac1c22d6f0a"
              },
              {
                "ipv4": "10.11.69.171",
                "subnet_id": "subnet-06f759521cbefaa85"
              }
            ],
            "subnet_ids": [
              "subnet-06f759521cbefaa85",
              "subnet-081943ac1c22d6f0a"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_security_group.vpce",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-00e760810a48fb58c",
            "dns_entry": [
              {
                "dns_name": "vpce-00e760810a48fb58c-lmm4km7y.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00e760810a48fb58c-lmm4km7y-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00e760810a48fb58c-lmm4km7y-ap-northeast-2b.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z01528202B140F1SWSAIZ"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z03070021J52TLE7MNCO7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00e760810a48fb58c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04adc4ffceaff9ef0",
              "eni-05e729e280adee0c3"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-036944860274080e8"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.11.33.220",
                "subnet_id": "subnet-081943ac1c22d6f0a"
              },
              {
                "ipv4": "10.11.79.198",
                "subnet_id": "subnet-06f759521cbefaa85"
              }
            ],
            "subnet_ids": [
              "subnet-06f759521cbefaa85",
              "subnet-081943ac1c22d6f0a"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_security_group.vpce",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dmz_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-06f6b4297ab313995",
            "dns_entry": [
              {
                "dns_name": "vpce-06f6b4297ab313995-rtsywmmx.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-06f6b4297ab313995-rtsywmmx-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-06f6b4297ab313995-rtsywmmx-ap-northeast-2b.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0306112Z3Y7AJMIVZT1"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0152802190QL766KE7AT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f6b4297ab313995",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-002fa1d8820d4a5b9",
              "eni-063fe67e946f3807d"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-036944860274080e8"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.11.33.20",
                "subnet_id": "subnet-081943ac1c22d6f0a"
              },
              {
                "ipv4": "10.11.77.154",
                "subnet_id": "subnet-06f759521cbefaa85"
              }
            ],
            "subnet_ids": [
              "subnet-06f759521cbefaa85",
              "subnet-081943ac1c22d6f0a"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "DMZ-VPC-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01b5a53c9e04110f8"
          },
          "dependencies": [
            "module.dmz_vpc.aws_security_group.vpce",
            "module.dmz_vpc.aws_subnet.private",
            "module.dmz_vpc.aws_vpc.this",
            "module.dmz_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:transit-gateway/tgw-0d1f92c621564a59e",
            "association_default_route_table_id": "tgw-rtb-01d76235df28c479c",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Lab Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0d1f92c621564a59e",
            "multicast_support": "disable",
            "owner_id": "654654438809",
            "propagation_default_route_table_id": "tgw-rtb-01d76235df28c479c",
            "region": "ap-northeast-2",
            "security_group_referencing_support": "disable",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-TGW",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "Lab-TGW",
              "Project": "aws-lab-infra"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:transit-gateway-attachment/tgw-attach-0416b0d791a6b679b",
            "dns_support": "enable",
            "id": "tgw-attach-0416b0d791a6b679b",
            "ipv6_support": "disable",
            "region": "ap-northeast-2",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-02356ccad49fdd6a3",
              "subnet-0dab00e336c889413"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-DMZ",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-DMZ",
              "Project": "aws-lab-infra"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_id": "vpc-01b5a53c9e04110f8",
            "vpc_owner_id": "654654438809"
          },
          "dependencies": [
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this",
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:transit-gateway-attachment/tgw-attach-0e22bd7bd9070588f",
            "dns_support": "enable",
            "id": "tgw-attach-0e22bd7bd9070588f",
            "ipv6_support": "disable",
            "region": "ap-northeast-2",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-059b35de1d5000353",
              "subnet-0ec50bbce4dd79f31"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-VPC01",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-VPC01",
              "Project": "aws-lab-infra"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_id": "vpc-08191ce0b5c9a8ace",
            "vpc_owner_id": "654654438809"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:transit-gateway-attachment/tgw-attach-04852748c36326c3c",
            "dns_support": "enable",
            "id": "tgw-attach-04852748c36326c3c",
            "ipv6_support": "disable",
            "region": "ap-northeast-2",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0bea984f5e39cdb16",
              "subnet-0d2e842566ef38273"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-VPC02",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "TGW-Attach-VPC02",
              "Project": "aws-lab-infra"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_id": "vpc-01fff0027b1214821",
            "vpc_owner_id": "654654438809"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "dmz_data_to_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052ba9b106b9a94dd3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-052ba9b106b9a94dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_route_table.data",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.dmz"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "dmz_data_to_vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-052ba9b106b9a94dd1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-052ba9b106b9a94dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_route_table.data",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.dmz"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "dmz_private_to_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ad84cbc37b649ce3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ad84cbc37b649ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_route_table.private",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.dmz"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "dmz_private_to_vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ad84cbc37b649ce1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ad84cbc37b649ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dmz_vpc.aws_route_table.private",
            "module.dmz_vpc.aws_subnet.attach",
            "module.dmz_vpc.aws_vpc.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.dmz"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_data_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0446637418b5cb7121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446637418b5cb712",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.data",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_data_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0446637418b5cb7123529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446637418b5cb712",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.data",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_data_to_vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0446637418b5cb7121218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446637418b5cb712",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.data",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9a25f53e72d06921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9a25f53e72d0692",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.private",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_private_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9a25f53e72d06923529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9a25f53e72d0692",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.private",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_private_to_vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d9a25f53e72d06921218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9a25f53e72d0692",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.private",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_public_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cddbc80b7e8a92f63529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cddbc80b7e8a92f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.public",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc01_public_to_vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cddbc80b7e8a92f61218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cddbc80b7e8a92f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc01",
            "module.vpc01.aws_route_table.public",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_data_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e010af7513ca0a481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e010af7513ca0a48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.data",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_data_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e010af7513ca0a483529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e010af7513ca0a48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.data",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_data_to_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e010af7513ca0a483322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e010af7513ca0a48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.data",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ebb2d3ffb1141761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01ebb2d3ffb114176",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.private",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_private_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ebb2d3ffb1141763529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01ebb2d3ffb114176",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.private",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_private_to_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ebb2d3ffb1141763322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01ebb2d3ffb114176",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.private",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_public_to_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.11.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026ff8d5e6de6608b3529440343",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-026ff8d5e6de6608b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.public",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc02_public_to_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026ff8d5e6de6608b3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-026ff8d5e6de6608b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d1f92c621564a59e",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.vpc02",
            "module.vpc02.aws_route_table.public",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-065dfe44b3dc3a0da",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPC01-ec2-ssm-20260307123954996100000004",
            "id": "i-065dfe44b3dc3a0da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02be645fc55606bf3"
              }
            ],
            "primary_network_interface_id": "eni-02be645fc55606bf3",
            "private_dns": "ip-10-1-59-250.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.59.250",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0b9dacc1e005d34",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b3f3feae4aa2b12",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b905135cb734799b"
            ]
          },
          "dependencies": [
            "module.vpc01.aws_iam_instance_profile.ec2_ssm",
            "module.vpc01.aws_iam_role.ec2_ssm",
            "module.vpc01.aws_security_group.ec2",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this",
            "module.vpc01.data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-085d5e607cbe73cfe",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPC01-ec2-ssm-20260307123954996100000004",
            "id": "i-085d5e607cbe73cfe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0219b33b65c27f9e8"
              }
            ],
            "primary_network_interface_id": "eni-0219b33b65c27f9e8",
            "private_dns": "ip-10-1-94-182.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.94.182",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f07f39e1e880208",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9abb49c2221f7cb",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b905135cb734799b"
            ]
          },
          "dependencies": [
            "module.vpc01.aws_iam_instance_profile.ec2_ssm",
            "module.vpc01.aws_iam_role.ec2_ssm",
            "module.vpc01.aws_security_group.ec2",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this",
            "module.vpc01.data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-01fb3ac814d52389a",
            "id": "rtb-01fb3ac814d52389a",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0446637418b5cb712",
            "id": "rtb-0446637418b5cb712",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0d9a25f53e72d0692",
            "id": "rtb-0d9a25f53e72d0692",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0cddbc80b7e8a92f6",
            "id": "rtb-0cddbc80b7e8a92f6",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbf93da9c903f248",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01fb3ac814d52389a",
            "subnet_id": "subnet-059b35de1d5000353"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.attach",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041234b1f2892780c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01fb3ac814d52389a",
            "subnet_id": "subnet-0ec50bbce4dd79f31"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.attach",
            "module.vpc01.aws_subnet.attach",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba81f57050ca4b67",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446637418b5cb712",
            "subnet_id": "subnet-08c34c42ab1a662a0"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.data",
            "module.vpc01.aws_subnet.data",
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d7671b0d2f29df",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446637418b5cb712",
            "subnet_id": "subnet-0edb702c9a0117e35"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.data",
            "module.vpc01.aws_subnet.data",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a73c25b0f37a95fc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9a25f53e72d0692",
            "subnet_id": "subnet-02b3f3feae4aa2b12"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.private",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07384a3609e7fad4b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d9a25f53e72d0692",
            "subnet_id": "subnet-0e9abb49c2221f7cb"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.private",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6c5b902407c4a5d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cddbc80b7e8a92f6",
            "subnet_id": "subnet-0a8d6435e37f83bde"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.public",
            "module.vpc01.aws_subnet.public",
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f10c9205e6f8195a",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cddbc80b7e8a92f6",
            "subnet_id": "subnet-0f8e4f3fe5288ea2f"
          },
          "dependencies": [
            "module.vpc01.aws_route_table.public",
            "module.vpc01.aws_subnet.public",
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-0b905135cb734799b",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b905135cb734799b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "ICMP from RFC1918",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPC01-ec2-2026030712400501430000000c",
            "name_prefix": "VPC01-ec2-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-07214cbf3419efc32",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07214cbf3419efc32",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPC01-vpce-20260307124005010100000007",
            "name_prefix": "VPC01-vpce-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-059b35de1d5000353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.248.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b35de1d5000353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0ec50bbce4dd79f31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.249.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec50bbce4dd79f31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-08c34c42ab1a662a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.160.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c34c42ab1a662a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0edb702c9a0117e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.168.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edb702c9a0117e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-02b3f3feae4aa2b12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b3f3feae4aa2b12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0e9abb49c2221f7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9abb49c2221f7cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0a8d6435e37f83bde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d6435e37f83bde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0f8e4f3fe5288ea2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e4f3fe5288ea2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc/vpc-08191ce0b5c9a8ace",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-038d39e026e1ff895",
            "default_route_table_id": "rtb-030738a9ef4431b93",
            "default_security_group_id": "sg-02e0ed8f636c090f4",
            "dhcp_options_id": "dopt-042f336bb0709cd7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08191ce0b5c9a8ace",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030738a9ef4431b93",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01",
              "Project": "aws-lab-infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-0fa9b0785d2e4147f",
            "dns_entry": [
              {
                "dns_name": "vpce-0fa9b0785d2e4147f-b774tnxf.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0fa9b0785d2e4147f-b774tnxf-ap-northeast-2b.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0fa9b0785d2e4147f-b774tnxf-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09008372NOV0RQEIEOW8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fa9b0785d2e4147f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06d2e2af4c4feb423",
              "eni-0bc8faed7124d16d2"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07214cbf3419efc32"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.41.235",
                "subnet_id": "subnet-02b3f3feae4aa2b12"
              },
              {
                "ipv4": "10.1.94.73",
                "subnet_id": "subnet-0e9abb49c2221f7cb"
              }
            ],
            "subnet_ids": [
              "subnet-02b3f3feae4aa2b12",
              "subnet-0e9abb49c2221f7cb"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_security_group.vpce",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this",
            "module.vpc01.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-0ee084d5304fab647",
            "dns_entry": [
              {
                "dns_name": "vpce-0ee084d5304fab647-zffmrfi2.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0ee084d5304fab647-zffmrfi2-ap-northeast-2b.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0ee084d5304fab647-zffmrfi2-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0151589MJ7LZ49NNC64"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z01751701H5IINORDVB8U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ee084d5304fab647",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c2797d6b64bfd38f",
              "eni-0ea279e3a3891aa2f"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07214cbf3419efc32"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.58.191",
                "subnet_id": "subnet-02b3f3feae4aa2b12"
              },
              {
                "ipv4": "10.1.84.220",
                "subnet_id": "subnet-0e9abb49c2221f7cb"
              }
            ],
            "subnet_ids": [
              "subnet-02b3f3feae4aa2b12",
              "subnet-0e9abb49c2221f7cb"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_security_group.vpce",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this",
            "module.vpc01.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-015a6c20c64224b92",
            "dns_entry": [
              {
                "dns_name": "vpce-015a6c20c64224b92-fgdw442o.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-015a6c20c64224b92-fgdw442o-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-015a6c20c64224b92-fgdw442o-ap-northeast-2b.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09000152TM9Y5RWU209Z"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z09000143IEZC5IIVQN9Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-015a6c20c64224b92",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0211638c2baed8928",
              "eni-0ac5adb9a3d73054c"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07214cbf3419efc32"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.63.58",
                "subnet_id": "subnet-02b3f3feae4aa2b12"
              },
              {
                "ipv4": "10.1.83.189",
                "subnet_id": "subnet-0e9abb49c2221f7cb"
              }
            ],
            "subnet_ids": [
              "subnet-02b3f3feae4aa2b12",
              "subnet-0e9abb49c2221f7cb"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC01-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08191ce0b5c9a8ace"
          },
          "dependencies": [
            "module.vpc01.aws_security_group.vpce",
            "module.vpc01.aws_subnet.private",
            "module.vpc01.aws_vpc.this",
            "module.vpc01.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-07d98239e048b3325",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPC02-ec2-ssm-20260307123955021500000005",
            "id": "i-07d98239e048b3325",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b72093c16b8970ca"
              }
            ],
            "primary_network_interface_id": "eni-0b72093c16b8970ca",
            "private_dns": "ip-10-2-38-178.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.38.178",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f720063b057a8242",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f13996be2c8d2353",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-Instance-A",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057f5ad62d0452e69"
            ]
          },
          "dependencies": [
            "module.vpc02.aws_iam_instance_profile.ec2_ssm",
            "module.vpc02.aws_iam_role.ec2_ssm",
            "module.vpc02.aws_security_group.ec2",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this",
            "module.vpc02.data.aws_ami.amazon_linux_2023"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01e135dc67c40df83",
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:instance/i-0bb976edb2b3c38e4",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPC02-ec2-ssm-20260307123955021500000005",
            "id": "i-0bb976edb2b3c38e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06da0f6d689766099"
              }
            ],
            "primary_network_interface_id": "eni-06da0f6d689766099",
            "private_dns": "ip-10-2-71-210.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.71.210",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0addf43f611c475d1",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee740b59489309e",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-Instance-B",
              "Project": "aws-lab-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057f5ad62d0452e69"
            ]
          },
          "dependencies": [
            "module.vpc02.aws_iam_instance_profile.ec2_ssm",
            "module.vpc02.aws_iam_role.ec2_ssm",
            "module.vpc02.aws_security_group.ec2",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this",
            "module.vpc02.data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0a3012220f3ac7870",
            "id": "rtb-0a3012220f3ac7870",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-0e010af7513ca0a48",
            "id": "rtb-0e010af7513ca0a48",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-01ebb2d3ffb114176",
            "id": "rtb-01ebb2d3ffb114176",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:route-table/rtb-026ff8d5e6de6608b",
            "id": "rtb-026ff8d5e6de6608b",
            "owner_id": "654654438809",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d1f92c621564a59e",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-RT",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-RT",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4bfe9c94f53d661",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a3012220f3ac7870",
            "subnet_id": "subnet-0bea984f5e39cdb16"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.attach",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b137a5bf8beda91e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a3012220f3ac7870",
            "subnet_id": "subnet-0d2e842566ef38273"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.attach",
            "module.vpc02.aws_subnet.attach",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd074113182dded2",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e010af7513ca0a48",
            "subnet_id": "subnet-0bc8322b76e487de4"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.data",
            "module.vpc02.aws_subnet.data",
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045db5d25afaf6da7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0e010af7513ca0a48",
            "subnet_id": "subnet-0b63c42449885af08"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.data",
            "module.vpc02.aws_subnet.data",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2b0f0d5977c928d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01ebb2d3ffb114176",
            "subnet_id": "subnet-0f13996be2c8d2353"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.private",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0101f5d1349aed6da",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01ebb2d3ffb114176",
            "subnet_id": "subnet-0cee740b59489309e"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.private",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c2ea2984d739a0",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-026ff8d5e6de6608b",
            "subnet_id": "subnet-0dd1c5452ccb03c7c"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.public",
            "module.vpc02.aws_subnet.public",
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd6cb45dea4e5fc",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-026ff8d5e6de6608b",
            "subnet_id": "subnet-0fb1f7f62cb960d7e"
          },
          "dependencies": [
            "module.vpc02.aws_route_table.public",
            "module.vpc02.aws_subnet.public",
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-057f5ad62d0452e69",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057f5ad62d0452e69",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "ICMP from RFC1918",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPC02-ec2-20260307124006415500000010",
            "name_prefix": "VPC02-ec2-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-EC2-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:security-group/sg-05fac707d34cd4a24",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fac707d34cd4a24",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPC02-vpce-2026030712400597580000000d",
            "name_prefix": "VPC02-vpce-",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-VPCE-SG",
              "Project": "aws-lab-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0bea984f5e39cdb16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.248.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea984f5e39cdb16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-A",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0d2e842566ef38273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.249.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e842566ef38273",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Attach-B",
              "Project": "aws-lab-infra",
              "Tier": "Attach"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0bc8322b76e487de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.160.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc8322b76e487de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-A",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0b63c42449885af08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.168.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b63c42449885af08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Data-B",
              "Project": "aws-lab-infra",
              "Tier": "Data"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0f13996be2c8d2353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f13996be2c8d2353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-A",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0cee740b59489309e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee740b59489309e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Private-B",
              "Project": "aws-lab-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0dd1c5452ccb03c7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd1c5452ccb03c7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-A",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:subnet/subnet-0fb1f7f62cb960d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb1f7f62cb960d7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654438809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-Public-B",
              "Project": "aws-lab-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc/vpc-01fff0027b1214821",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0a51b0c639dcfae33",
            "default_route_table_id": "rtb-0350f52de6b931197",
            "default_security_group_id": "sg-0f1d4d82ac7d05a74",
            "dhcp_options_id": "dopt-042f336bb0709cd7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fff0027b1214821",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0350f52de6b931197",
            "owner_id": "654654438809",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02",
              "Project": "aws-lab-infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-0c4936d81242b05f1",
            "dns_entry": [
              {
                "dns_name": "vpce-0c4936d81242b05f1-tvk3ktqq.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c4936d81242b05f1-tvk3ktqq-ap-northeast-2b.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c4936d81242b05f1-tvk3ktqq-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z01515753BJP45SH52TTK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c4936d81242b05f1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00372c918c1783f65",
              "eni-0523ad91095965dd4"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05fac707d34cd4a24"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.2.39.118",
                "subnet_id": "subnet-0f13996be2c8d2353"
              },
              {
                "ipv4": "10.2.89.122",
                "subnet_id": "subnet-0cee740b59489309e"
              }
            ],
            "subnet_ids": [
              "subnet-0cee740b59489309e",
              "subnet-0f13996be2c8d2353"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-EC2Messages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_security_group.vpce",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this",
            "module.vpc02.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-021c44882397351b1",
            "dns_entry": [
              {
                "dns_name": "vpce-021c44882397351b1-q2v4i2bu.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-021c44882397351b1-q2v4i2bu-ap-northeast-2b.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-021c44882397351b1-q2v4i2bu-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z01516141JMACPGOM93GI"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z01515913TT31AD73CHTE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-021c44882397351b1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09905821b2c85e4b3",
              "eni-0aea704c8ed2ce13d"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05fac707d34cd4a24"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.2.62.165",
                "subnet_id": "subnet-0f13996be2c8d2353"
              },
              {
                "ipv4": "10.2.86.93",
                "subnet_id": "subnet-0cee740b59489309e"
              }
            ],
            "subnet_ids": [
              "subnet-0cee740b59489309e",
              "subnet-0f13996be2c8d2353"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-SSM-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_security_group.vpce",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this",
            "module.vpc02.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc02",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:654654438809:vpc-endpoint/vpce-0aab76561ea828a15",
            "dns_entry": [
              {
                "dns_name": "vpce-0aab76561ea828a15-5hw586d5.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0aab76561ea828a15-5hw586d5-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0aab76561ea828a15-5hw586d5-ap-northeast-2b.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z03071131B6KL6L6PJ3TL"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z02776501QF40GU28PV3B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aab76561ea828a15",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02700fa78a9a6cc1a",
              "eni-03d31e366d2b77698"
            ],
            "owner_id": "654654438809",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-05fac707d34cd4a24"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.2.47.104",
                "subnet_id": "subnet-0f13996be2c8d2353"
              },
              {
                "ipv4": "10.2.65.127",
                "subnet_id": "subnet-0cee740b59489309e"
              }
            ],
            "subnet_ids": [
              "subnet-0cee740b59489309e",
              "subnet-0f13996be2c8d2353"
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "terraform",
              "Name": "VPC02-SSMMessages-Endpoint",
              "Project": "aws-lab-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01fff0027b1214821"
          },
          "dependencies": [
            "module.vpc02.aws_security_group.vpce",
            "module.vpc02.aws_subnet.private",
            "module.vpc02.aws_vpc.this",
            "module.vpc02.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}